@@ -1,4 +1,5 @@
 v0.11
+	* ADD : when deleting roads, ask if nodes should be deleted also
 	* ADD : "View downloaded area": "dot" the areas not downloaded from OSM during the current session
 	* ADD : Save position of last edit session on exit
 	* ADD : Split a road by selecting only the node
